--- a/style.css
+++ b/style.css
@@ -507,7 +507,7 @@ footer .button:active{
     background-image: url(EN.png);
 }
 #btn-1{
-    background-image: url(pt.png);
+    background-image: url(PT.png);
 }
 
 #btn-2{
